# speculative-decoder

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: custom_cases.json  framework_adapter.py
scripts/: bootstrap.sh  run_sample.sh
src/speculative_bench/: __init__.py  __main__.py  algorithms.py  cases.py  cli.py  config.py  environment.py  integrations.py  metrics.py  reporting.py  runner.py  types.py
src/speculative_bench/data/: __init__.py  default_cases.json
tests/: test_cases.py  test_cli.py  test_metrics.py  test_reporting.py  test_runner.py
